--- a/src/stories/Button/button.scss
+++ b/src/stories/Button/button.scss
@@ -67,8 +67,13 @@
     align-items: center;
     padding: 0;
 
-    a:hover {
+    a {
+      color: white;
       text-decoration: none;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 
