--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,11 +12,19 @@
   --ft-body-0: 0.83rem;
   --ft-body-1: 0.875rem;
   --ft-body-2: 1rem;
+  --ft-body-3: 1.2rem;
   --ft-sm-0: 0.5rem;
   --ft-sm-1: 0.6rem;
   --ft-sm-2: 0.68rem;
-  --ft-caption: 0.75rem;
-  --ft-label: 0.6875rem;
 
   /* Colors */
+  --red-0: oklch(25.8% 0.092 26.042);
+  --red-1: oklch(39.6% 0.141 25.723);
+  --red-2: oklch(44.4% 0.177 26.899);
+  --red-3: oklch(50.5% 0.213 27.518);
+  --red-4: oklch(57.7% 0.245 27.325);
+  --red-5: oklch(63.7% 0.237 25.331);
+  --red-6: oklch(70.4% 0.191 22.216);
+  --red-7: oklch(80.8% 0.114 19.571);
+  --red-8: oklch(88.5% 0.062 18.334);
 }
